# Book_IMS

./: .gitignore  README.md  api.py  populate_database.py  pyproject.toml  router.py  streamlit_client.py
Backend/: api.py  pyproject.toml
Backend/app/database/schemas/: author.py  base.py  books.py  logs.py
Backend/app/services/: author_services.py  book_services.py
Backend/app/utils/: llm.py  populate_database.py
Frontend/: index.css  index.html  script.js
app/: api.py  config.py
app/database/: Tabel.py  connector.py  populate_database.py
app/database/Schemas/: author.py  books.py  genre.py  logs.py  preferences.py  user.py
app/database/schemas/: author.py  base.py  books.py  user_likes_books.py
app/middleware/: request_logger.py
app/routers/: router.py
app/schemas/: author.py  book.py  like.py  query.py  session.py  user.py
app/services/: authenticate_user.py  author_retrievals.py  author_services.py  book_recommendations.py  book_retrievals.py  book_services.py  jwt_bearer.py  jwt_handler.py  like_services.py  token.py  token_services.py  user_registration.py  user_retrievals.py  user_services.py
app/utils/: add_books.py  add_thumbnail.py  chatbot.py  custom_handler.py  get_current_user.py  llm_utils.py  populate_database.py  recommendations.py  vector_store.py  vectordb.py
database/: populate_database.py
database/Schemas/: base.py  user.py
routers/: router.py
schemas/: book.py
tests/: test_author_endpoints.py  test_book_endpoints.py  test_user_endpoints.py
